[ADD] save word of day 30/09/2022

--- a/index.html
+++ b/index.html
@@ -13,11 +13,67 @@
 
     <body>
 
-          <div id="container Dashboard">
+      <div id="container">
+
+          <nav id="box Dashboard">
 
             <div id="container image">
 
               <img id="logo simonneau" src="./image/logo_simonneau.png" alt="simonneau logo"/>
+              <img id="logo simonneau avec ecriture" src="./image/logo_simoneau_avec_ecriture.png" alt="simonneau logo" hidden/>
+
+            </div>
+
+            <div id="container liste button">
+
+              <div id="liste button">
+
+                <a id="home page">
+
+                  <div id="box button">
+
+                    <img id="home button" src="./image/home_color.png" alt="home page"/>
+
+                  </div>
+
+                  <div id="home text">Mes Operations</div>
+
+                </a>
+
+                <a id="compte page">
+
+                  <div id="box button">
+
+                    <img id="compte button" src="./image/compte.png" alt="compte page">
+
+                  </div>
+
+                  <div id="compte text">Mon compte</div>
+
+                </a>
+
+                <a id="login page">
+
+                  <div id="box button">
+
+                    <img id="deconnexion button" src="./image/deconnexion.png" alt="login page">
+
+                  </div>
+
+                  <div id="login text">Se deconnecter</div>
+
+                </a>
+
+              </div>
+
+            </div>
+
+          </nav>
+
+          <div id="test">
+
+            <div id="container image">
+
               <img id="logo simonneau avec ecriture" src="./image/logo_simoneau_avec_ecriture.png" alt="simonneau logo" hidden/>
 
             </div>
@@ -93,6 +149,8 @@
             </div>
 
           </main>
+
+      </div>
 
       <script src="index.js"></script>
 
