[ADD] save day 03/30/2022

--- a/index.html
+++ b/index.html
@@ -15,132 +15,103 @@
 
       <div id="container">
 
-          <nav id="box Dashboard">
 
-            <div id="container image">
+        <nav id="shadow Dashboard">
 
-              <img id="logo simonneau" src="./image/logo_simonneau.png" alt="simonneau logo"/>
-              <img id="logo simonneau avec ecriture" src="./image/logo_simoneau_avec_ecriture.png" alt="simonneau logo" hidden/>
+          <div id="liste text button">
 
-            </div>
+            <div id="container text button">
 
-            <div id="container liste button">
-
-              <div id="liste button">
-
-                <a id="home page">
-
-                  <div id="box button">
-
-                    <img id="home button" src="./image/home_color.png" alt="home page"/>
-
-                  </div>
-
-                  <div id="home text">Mes Operations</div>
-
-                </a>
-
-                <a id="compte page">
-
-                  <div id="box button">
-
-                    <img id="compte button" src="./image/compte.png" alt="compte page">
-
-                  </div>
-
-                  <div id="compte text">Mon compte</div>
-
-                </a>
-
-                <a id="login page">
-
-                  <div id="box button">
-
-                    <img id="deconnexion button" src="./image/deconnexion.png" alt="login page">
-
-                  </div>
-
-                  <div id="login text">Se deconnecter</div>
-
-                </a>
-
-              </div>
+              <a id="text button">Mes Operations</a>
 
             </div>
 
-          </nav>
+            <div id="container text button">
 
-          <div id="test">
-
-            <div id="container image">
-
-              <img id="logo simonneau avec ecriture" src="./image/logo_simoneau_avec_ecriture.png" alt="simonneau logo" hidden/>
+              <a id="text button">Mon compte</a>
 
             </div>
 
-            <div id="container liste button">
+            <div id="container text button">
 
-              <div id="liste button">
-
-                <a id="home page">
-
-                  <div id="box button">
-
-                    <img id="home button" src="./image/home_color.png" alt="home page"/>
-
-                  </div>
-
-                  <div id="home text">Mes Operations</div>
-
-                </a>
-
-                <a id="compte page">
-
-                  <div id="box button">
-
-                    <img id="compte button" src="./image/compte.png" alt="compte page">
-
-                  </div>
-
-                  <div id="compte text">Mon compte</div>
-
-                </a>
-
-                <a id="login page">
-
-                  <div id="box button">
-
-                    <img id="deconnexion button" src="./image/deconnexion.png" alt="login page">
-
-                  </div>
-
-                  <div id="login text">Se deconnecter</div>
-
-                </a>
-
-              </div>
+              <a id="text button">Se deconnecter</a>
 
             </div>
 
           </div>
 
-          <main id="body page">
+        </nav>
 
-            <div id="box body">
+        <nav id="box Dashboard" onmouseover="slide_right_dashboard();" onmouseout="slide_left_dashboard();">
 
-              <div id="wrap body">
+          <div id="container image">
 
-                <div id="top body">
+            <img id="logo simonneau" src="./image/logo_simonneau.png" alt="simonneau logo"/>
+            <img id="logo simonneau avec ecriture" src="./image/logo_simoneau_avec_ecriture.png" alt="simonneau logo" hidden/>
 
-                  <header id="header top body">
+          </div>
 
-                    <div id="box toolbar">
+          <div id="container liste button">
 
-                      
+            <div id="liste button">
 
-                    </div>
+              <a id="home page">
 
-                  </header>
+                <div id="box button">
+
+                  <img id="home button" src="./image/home_color.png" alt="home page"/>
+
+                </div>
+
+                <div id="home text">Mes Operations</div>
+
+              </a>
+
+              <a id="compte page">
+
+                <div id="box button">
+
+                  <img id="compte button" src="./image/compte.png" alt="compte page">
+
+                </div>
+
+                <div id="compte text">Mon compte</div>
+
+              </a>
+
+              <a id="login page">
+
+                <div id="box button">
+
+                  <img id="deconnexion button" src="./image/deconnexion.png" alt="login page">
+
+                </div>
+
+                <div id="login text">Se deconnecter</div>
+
+              </a>
+
+            </div>
+
+          </div>
+
+        </nav>
+
+        <main id="main box"">
+
+          <header id="header main box">
+
+            <div id="box header main box">
+
+              <div id="Title">Mes Operations</div>
+
+              <div id="box recherche">
+
+                <input id="recherche d'operation">
+
+                <div id="box recherche logo">
+
+                  <img id="logo search" src="/image/chercher.png"/>
 
                 </div>
 
@@ -148,7 +119,9 @@
 
             </div>
 
-          </main>
+          </header>
+
+        </main>
 
       </div>
 
